<resources>
    <string name="app_name">NMedia</string>
    <string name="title_text">NMedia!</string>
    <string name="menu_description">Menu</string>
    <string name="avatar_description">Avatar</string>
    <string name="like_description">Likes</string>
    <string name="share_description">Share</string>
    <string name="view_description">Viewed</string>
    <string name="post_text">Input text</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="can_not_be_empty">Content can\'t be empty</string>
    <string name="edit_message">Edit message</string>
    <string name="play">Play</string>
    <string name="save_post">SavePost</string>
    <string name="add_edit">Add/Edit</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s created post</string>
</resources>