<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/post_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/posts_spacing"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintBottom_toBottomOf="@id/barrier_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_netology_48" />

    <TextView
        android:layout_marginStart="@dimen/common_spacing"
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Нетология. Меняем карьеру через образование" />

    <TextView
        android:layout_marginStart="@dimen/common_spacing"
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/barrier_top"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="21 мая 18:36" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.AppTheme.IconOnly"
        app:icon="@drawable/ic_baseline_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author, avatar, menu, published" />

    <TextView
        android:id="@+id/content"
        android:autoLink="web"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_top"
        tools:text="@string/post_text" />

    <ImageView
        android:id="@+id/video_preview"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="@+id/video_group"
        app:layout_constraintStart_toStartOf="@+id/video_group"
        android:layout_height="wrap_content"
        android:contentDescription="@string/avatar_description"
        android:src="@drawable/youtube_preview" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/video_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/video_preview"
        app:layout_constraintTop_toTopOf="@id/video_preview"
        app:layout_constraintEnd_toEndOf="@id/video_preview"
        app:layout_constraintStart_toStartOf="@id/video_preview"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24"
        android:contentDescription="@string/play" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/video_group"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="video_play, video_preview"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/like_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        style="@style/Widget.AppTheme.LikeButton"
        app:icon="@drawable/ic_like_selector"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom"
        android:contentDescription="@string/like_description"
        tools:checked="true"
        tools:text="1"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:barrierDirection="bottom"
        app:layout_constraintTop_toBottomOf="@id/video_group"
        app:constraint_referenced_ids="video_preview, like_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom"
        app:icon="@drawable/ic_baseline_share_24"
        style="@style/Widget.AppTheme.ShareButton"
        app:layout_constraintStart_toEndOf="@id/like_icon"
        android:layout_marginStart="@dimen/common_spacing"
        android:contentDescription="@string/share_description"
        tools:text="1"
        />

    <ImageButton
        android:id="@+id/view_icon"
        android:layout_width="@dimen/action_icon_size"
        android:layout_height="@dimen/action_icon_size"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom"
        app:icon="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintEnd_toStartOf="@id/view_text"
        android:layout_marginEnd="@dimen/action_icon_spacing"
        android:contentDescription="@string/view_description"
        />

    <TextView
        android:id="@+id/view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier_bottom"
        tools:text="5" />
</androidx.constraintlayout.widget.ConstraintLayout>