<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/common_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/tools_top"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edited_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/tools_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/edit_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

        <TextView
            android:id="@+id/edit_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/edit_message"
            android:textColor="@color/grey"
            app:layout_constraintStart_toEndOf="@id/edit_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/common_spacing"
            app:layout_constraintEnd_toStartOf="@id/cancel_edit"
            app:layout_constraintStart_toEndOf="@id/edit_icon"
            app:layout_constraintTop_toBottomOf="@id/edit_title"
            tools:text="Edit message Edit message v dit message  dit message   dit message  dit message  Edit message Edit message Edit message Edit message" />

        <ImageButton
            android:id="@+id/cancel_edit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_cancel_48" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/edit_text_top"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="tools_top, edited_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/tools_top"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content, save" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tools_top" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_spacing"
        android:layout_marginBottom="@dimen/small_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:srcCompat="@drawable/ic_save_48" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="edited_post, edit_text_top"
        android:id="@+id/edit_group" />


</androidx.constraintlayout.widget.ConstraintLayout>